completed header and hero version 1 sections. Need to fix typography scales

--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -24,11 +24,21 @@
         <p id="navbar-logo-text">PyWebDev.org</p>
         <nav class="nav-div">
             <ul>
-                <li> <a href=""> <i class="nav-icon ph-brackets-curly-light"></i> Frontend</a></li>
-                <li> <a href=""> <i class="nav-icon ph-code-light"></i> Backend</a></li>
-                <li> <a href=""> <i class="nav-icon ph-file-code-light"></i> Docs</a></li>
-                <li> <a href=""> <i class="nav-icon ph-codepen-logo-light"></i> Projects</a></li>
-                <li> <a href=""> <i class="nav-icon ph-users-three-light"></i> Community</a></li>
+                <li>
+                    <a href="#" class="main-nav-links"> <i class="nav-icon ph-brackets-curly-light"></i> Frontend</a>
+                </li>
+                <li>
+                    <a href="#" class="main-nav-links"> <i class="nav-icon ph-code-light"></i> Backend</a>
+                </li>
+                <li>
+                    <a href="#" class="main-nav-links"> <i class="nav-icon ph-file-code-light"></i> Docs</a>
+                </li>
+                <li>
+                    <a href="#" class="main-nav-links"> <i class="nav-icon ph-codepen-logo-light"></i> Projects</a>
+                </li>
+                <li>
+                    <a href="#" class="main-nav-links"> <i class="nav-icon ph-users-three-light"></i> Community</a>
+                </li>
             </ul>
         </nav>
     </header>
