--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -1,123 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Permanent+Marker&display=swap"
-        rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Permanent+Marker&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <script src="https://unpkg.com/phosphor-icons"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <title>PyWebDev</title>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <header class="header">
-        <p id="navbar-logo-text">PyWebDev.org</p>
-        <nav class="nav-div">
-            <ul>
-                <li>
-                    <a href="#" class="main-nav-links"> <i class="nav-icon ph-brackets-curly-light"></i> Frontend</a>
-                </li>
-                <li>
-                    <a href="#" class="main-nav-links"> <i class="nav-icon ph-code-light"></i> Backend</a>
-                </li>
-                <li>
-                    <a href="#" class="main-nav-links"> <i class="nav-icon ph-file-code-light"></i> Docs</a>
-                </li>
-                <li>
-                    <a href="#" class="main-nav-links"> <i class="nav-icon ph-codepen-logo-light"></i> Projects</a>
-                </li>
-                <li>
-                    <a href="#" class="main-nav-links"> <i class="nav-icon ph-users-three-light"></i> Community</a>
-                </li>
-            </ul>
-        </nav>
+      <p id="navbar-logo-text">PyWebDev.org</p>
+      <nav class="nav-div">
+        <ul>
+          <li>
+            <a href="#" class="main-nav-links">
+              <i class="nav-icon ph-brackets-curly-light"></i> Frontend</a
+            >
+          </li>
+          <li>
+            <a href="#" class="main-nav-links">
+              <i class="nav-icon ph-code-light"></i> Backend</a
+            >
+          </li>
+          <li>
+            <a href="#" class="main-nav-links">
+              <i class="nav-icon ph-file-code-light"></i> Docs</a
+            >
+          </li>
+          <li>
+            <a href="#" class="main-nav-links">
+              <i class="nav-icon ph-codepen-logo-light"></i> Projects</a
+            >
+          </li>
+          <li>
+            <a href="#" class="main-nav-links">
+              <i class="nav-icon ph-users-three-light"></i> Community</a
+            >
+          </li>
+        </ul>
+      </nav>
     </header>
-    <!-- <header class="grid-3-columns header">
-        <p id="navbar-logo-text">PyWebDev.org</p>
-        <nav class="nav-div">
-            <ul>
-                <li> <a href=""> <i class="nav-icon ph-brackets-curly-light"></i> Frontend</a></li>
-                <li> <a href=""> <i class="nav-icon ph-code-light"></i> Backend</a></li>
-                <li> <a href=""> <i class="nav-icon ph-file-code-light"></i> Docs</a></li>
-                <li> <a href=""> <i class="nav-icon ph-codepen-logo-light"></i> Projects</a>
-                    <div class="submenu-projects">
-                        <ul>
-                            <li>
-                                <a href="Guess-My-Number/index.html" target="_blank">
-                                    Guess my Number Game
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="nav-elements">
-                                    Calculator App
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Weather GUI
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li> <a href=""> <i class="nav-icon ph-users-three-light"></i> Community</a></li>
-            </ul>
-        </nav>
-    </header> -->
+
     <main>
-        <section class="section-hero">
-            <div class="hero">
-                <div class="hero-text-box">
-                    <h1 class="hero-title">Welcome Python WebDevs</h1>
-                    <p class="hero-text">Join our growing community and meet other Python Web Developers! Whether
-                        you're searching for Docs, want to stay up to date on interesting topics like Bootstrap,
-                        Flask
-                        and Frontend trends or simply want to collaborate with others - join now!
-                    </p>
-                    <a role="button" class="button button-big" href="#">Join our Community</a>
-                    <div class="community">
-                        <div class="community-members">
-                            <img src="../images/community-members/team-member-1.jpg" alt="team member">
-                            <img src="../images/community-members/team-member-2.jpg" alt="team member">
-                            <img src="../images/community-members/team-member-3.jpg" alt="team member">
-                            <img src="../images/community-members/team-member-4.jpg" alt="team member">
-                            <img src="../images/community-members/team-member-5.jpg" alt="team member">
-                            <img src="../images/community-members/team-member-6.jpg" alt="team member">
-                            <img src="../images/community-members/team-member-7.jpg" alt="team member">
-                        </div>
-                        <div class="community-text">
-                            <p> <span> 5,000+ </span> active members and growing!</p>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="hero-images">
-                    <img src="../images/dark-code.png" alt="dark-theme-code" class="dark-theme-python">
-                    <!-- <img src="../images/light-code.png" alt="light-theme-code" id="light-theme-python"> -->
-                    <!-- <img src="../images/html-code.png" alt="screenshot of html-code on screen" class="dark-theme-html"> -->
-                </div>
+      <section class="section-hero">
+        <div class="hero">
+          <div class="hero-text-box">
+            <h1 class="hero-title">Welcome Python WebDevs</h1>
+            <p class="hero-text">
+              Join our growing community and meet other Python Web Developers!
+              Whether you're searching for Docs, want to stay up to date on
+              interesting topics like Bootstrap, Flask and Frontend trends or
+              simply want to collaborate with others - join now!
+            </p>
+            <a role="button" class="button button-big" href="#"
+              >Join our Community</a
+            >
+            <div class="community">
+              <div class="community-members">
+                <img
+                  src="../images/community-members/team-member-1.jpg"
+                  alt="team member"
+                />
+                <img
+                  src="../images/community-members/team-member-2.jpg"
+                  alt="team member"
+                />
+                <img
+                  src="../images/community-members/team-member-3.jpg"
+                  alt="team member"
+                />
+                <img
+                  src="../images/community-members/team-member-4.jpg"
+                  alt="team member"
+                />
+                <img
+                  src="../images/community-members/team-member-5.jpg"
+                  alt="team member"
+                />
+                <img
+                  src="../images/community-members/team-member-6.jpg"
+                  alt="team member"
+                />
+                <img
+                  src="../images/community-members/team-member-7.jpg"
+                  alt="team member"
+                />
+              </div>
+              <div class="community-text">
+                <p><span> 5,000+ </span> active members and growing!</p>
+              </div>
             </div>
-        </section>
+          </div>
+          <div class="hero-images">
+            <img
+              src="../images/dark-code.png"
+              alt="dark-theme-code"
+              class="dark-theme-python"
+            />
+            <!-- <img src="../images/light-code.png" alt="light-theme-code" id="light-theme-python"> -->
+            <!-- <img src="../images/html-code.png" alt="screenshot of html-code on screen" class="dark-theme-html"> -->
+          </div>
+        </div>
+      </section>
 
-        <section class="section-why-join">
-            <div class="container grid grid--2-columns">
-                <div>Test 1</div>
-                <div>Test 2</div>
-                <div>Test 3</div>
-                <div>Test 4</div>
-            </div>
-        </section>
+      <section class="section-why-join">
+        <div class="section-heading container">
+          <h2>Become a PyWebDev Community Member</h2>
+        </div>
+        <div class="container grid grid--2-columns">
+          <div class="why-join-text-box">
+            <p class="step-number">1</p>
+            <h3 class="heading-h3">Sign Up for Free!</h3>
+            <p class="step-description">
+              Become a member of the PyWebDev Community to gain access to
+              hundreds of free resources.
+            </p>
+          </div>
+          <div class="why-join-image">
+            <img src="../images/sign-up-form.png" alt="" />
+          </div>
+          <div class="why-join-image">4 Words</div>
+          <div class="why-join-text-box">Learn by...</div>
+          <div class="why-join-text-box">Network</div>
+          <div class="why-join-image">Connect with others</div>
+        </div>
+      </section>
     </main>
-</body>
-
+  </body>
 </html>
