--- a/HTML_CSS/WebDesign/PyWebDev/scrap.html
+++ b/HTML_CSS/WebDesign/PyWebDev/scrap.html
@@ -1,118 +1,137 @@
 <section class="testimonial-section">
-    <section class="content-container testimonial-content">
-        <!-- <img src="../images/python-logo.png" alt="" id="small-python"> -->
-        <div class="grid-3-cols">
-            <img src="../images/flask-code.png" alt="python code on screen" id="python-code">
-            <div class="testimonial-flex-box">
-                <h2 class="testimonial-title">
-                    <span id="simple">Simple. </span>
-                    <span id="elegant">Elegant. </span>
-                    <span id="popular">Popular.</span>
-                </h2>
-                <blockquote>
-                    Python is incredibly easy to read, so developers typically have no
-                    problems understanding code written by their fellow programmers.
-                    This makes the communication
-                    between developers working on the same project much more efficient.
-                </blockquote>
-                <p class="testimonial-author"> - Jose Servin (PyWebDev Community Member)</p>
-            </div>
-        </div>
-    </section>
+  <section class="content-container testimonial-content">
+    <!-- <img src="../images/python-logo.png" alt="" id="small-python"> -->
+    <div class="grid-3-cols">
+      <img
+        src="../images/flask-code.png"
+        alt="python code on screen"
+        id="python-code"
+      />
+      <div class="testimonial-flex-box">
+        <h2 class="testimonial-title">
+          <span id="simple">Simple. </span>
+          <span id="elegant">Elegant. </span>
+          <span id="popular">Popular.</span>
+        </h2>
+        <blockquote>
+          Python is incredibly easy to read, so developers typically have no
+          problems understanding code written by their fellow programmers. This
+          makes the communication between developers working on the same project
+          much more efficient.
+        </blockquote>
+        <p class="testimonial-author">
+          - Jose Servin (PyWebDev Community Member)
+        </p>
+      </div>
+    </div>
+  </section>
 </section>
 
 <section class="framework-section">
-    <div class="framework-section-angle"></div>
-    <section class="content-container">
-        <h2>Python Web Frameworks</h2>
-        <div class="grid-3-cols">
-            <figure>
-                <div class="framework-box">
-                    <img src="../images/Django.svg" alt="Django logo" class="framework-image">
-                    <h3 class="framework-title">Django</h3>
-                    <ul class="framework-details">
-                        <li>
-                            <i class="small-li-icon ph-circle-fill"></i>
-                            <span>Great for fully-fledged web apps.</span>
-                        </li>
-                        <li>
-                            <i class="small-li-icon ph-circle-fill"></i>
-                            <span>Strong Database Integration.</span>
-                        </li>
-                        <li>
-                            <i class="small-li-icon ph-circle-fill"></i>
-                            <span>Model-Template-View Architecture</span>
-                        </li>
-                    </ul>
-                    <a role="button" class="button button-small" href="#">Learn More</a>
-                </div>
-
-            </figure>
-            <figure>
-                <div class="framework-box">
-                    <img src="../images/flask-logo.svg" alt="Flask logo" class="framework-image">
-                    <h3 class="framework-title">Flask</h3>
-                    <ul class="framework-details">
-                        <li>
-                            <i class="small-li-icon ph-circle-fill"></i>
-                            <span>Simple and manageable solutions.</span>
-                        </li>
-                        <li>
-                            <i class="small-li-icon ph-circle-fill"></i>
-                            <span>Great for lean functionality.</span>
-                        </li>
-                        <li>
-                            <i class="small-li-icon ph-circle-fill"></i>
-                            <span>Prototype Building solution.</span>
-                        </li>
-                    </ul>
-                    <a role="button" class="button button-small" href="#">Learn More</a>
-                </div>
-
-            </figure>
-            <figure>
-                <div class="framework-box">
-                    <img src="../images/falcon-logo.svg" alt="Flacon logo" class="framework-image">
-                    <h3 class="framework-title">Falcon</h3>
-                    <ul class="framework-details">
-                        <li>
-                            <i class="small-li-icon ph-circle-fill"></i>
-                            <span>Minimalist ASGI/WSGI framework.</span>
-                        </li>
-                        <li>
-                            <i class="small-li-icon ph-circle-fill"></i>
-                            <span>REST architectural style.</span>
-                        </li>
-                        <li>
-                            <i class="small-li-icon ph-circle-fill"></i>
-                            <span>Lean solution.</span>
-                        </li>
-                    </ul>
-                    <a role="button" class="button button-small" href="#">Learn More</a>
-                </div>
-            </figure>
+  <div class="framework-section-angle"></div>
+  <section class="content-container">
+    <h2>Python Web Frameworks</h2>
+    <div class="grid-3-cols">
+      <figure>
+        <div class="framework-box">
+          <img
+            src="../images/Django.svg"
+            alt="Django logo"
+            class="framework-image"
+          />
+          <h3 class="framework-title">Django</h3>
+          <ul class="framework-details">
+            <li>
+              <i class="small-li-icon ph-circle-fill"></i>
+              <span>Great for fully-fledged web apps.</span>
+            </li>
+            <li>
+              <i class="small-li-icon ph-circle-fill"></i>
+              <span>Strong Database Integration.</span>
+            </li>
+            <li>
+              <i class="small-li-icon ph-circle-fill"></i>
+              <span>Model-Template-View Architecture</span>
+            </li>
+          </ul>
+          <a role="button" class="button button-small" href="#">Learn More</a>
         </div>
-    </section>
+      </figure>
+      <figure>
+        <div class="framework-box">
+          <img
+            src="../images/flask-logo.svg"
+            alt="Flask logo"
+            class="framework-image"
+          />
+          <h3 class="framework-title">Flask</h3>
+          <ul class="framework-details">
+            <li>
+              <i class="small-li-icon ph-circle-fill"></i>
+              <span>Simple and manageable solutions.</span>
+            </li>
+            <li>
+              <i class="small-li-icon ph-circle-fill"></i>
+              <span>Great for lean functionality.</span>
+            </li>
+            <li>
+              <i class="small-li-icon ph-circle-fill"></i>
+              <span>Prototype Building solution.</span>
+            </li>
+          </ul>
+          <a role="button" class="button button-small" href="#">Learn More</a>
+        </div>
+      </figure>
+      <figure>
+        <div class="framework-box">
+          <img
+            src="../images/falcon-logo.svg"
+            alt="Flacon logo"
+            class="framework-image"
+          />
+          <h3 class="framework-title">Falcon</h3>
+          <ul class="framework-details">
+            <li>
+              <i class="small-li-icon ph-circle-fill"></i>
+              <span>Minimalist ASGI/WSGI framework.</span>
+            </li>
+            <li>
+              <i class="small-li-icon ph-circle-fill"></i>
+              <span>REST architectural style.</span>
+            </li>
+            <li>
+              <i class="small-li-icon ph-circle-fill"></i>
+              <span>Lean solution.</span>
+            </li>
+          </ul>
+          <a role="button" class="button button-small" href="#">Learn More</a>
+        </div>
+      </figure>
+    </div>
+  </section>
 </section>
 
-
 <section class="community-section">
-    <div class="content-container">
-        <h2>Join our Growing Community</h2>
-        <div class="community-grid">
-            <!-- <a class="community-element" href="#">HTML</a> -->
-            <img src="../images/html.png" alt="" class="community-element" id="html">
-            <a class="community-element" href="#"> Collaborate</Collaborate></a>
-            <a class="community-element" href="#">JavaScript</a>
-            <a class="community-element" href="#">Mentor</a>
-            <a class="community-element" href="#">Python</a>
-            <a class="community-element" href="#">Contribute</a>
-            <a class="community-element" href="#">CSS</a>
-            <a class="community-element" href="#">Learn</a>
-            <a class="community-element" href="#">Docker</a>
-        </div>
+  <div class="content-container">
+    <h2>Join our Growing Community</h2>
+    <div class="community-grid">
+      <!-- <a class="community-element" href="#">HTML</a> -->
+      <img
+        src="../images/html.png"
+        alt=""
+        class="community-element"
+        id="html"
+      />
+      <a class="community-element" href="#"> Collaborate</a>
+      <a class="community-element" href="#">JavaScript</a>
+      <a class="community-element" href="#">Mentor</a>
+      <a class="community-element" href="#">Python</a>
+      <a class="community-element" href="#">Contribute</a>
+      <a class="community-element" href="#">CSS</a>
+      <a class="community-element" href="#">Learn</a>
+      <a class="community-element" href="#">Docker</a>
     </div>
-    </div>
+  </div>
 </section>
 
 <!-- <footer class="grid-6-cols">
@@ -128,46 +147,58 @@
     </footer> -->
 <script src="script.js"></script>
 
-
 <!-- NEW SECTIONS -->
 <section class="why-section">
-    <h2>Why Python?</h2>
-    <div class="grid-3-columns">
-        <div>
-            <i class="ph ph-book-open"></i>
-            <h3>Rich Standard Library</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem voluptates, accusamus
-                dignissimos molestiae, quidem doloremque tenetur nec</p>
-        </div>
-        <div>
-            <i class="ph ph-code"></i>
-            <h3>Easy and Readable</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem voluptates, accusamus
-                dignissimos molestiae, quidem doloremque tenetur nec</p>
-        </div>
-        <div>
-            <i class="ph ph-stack-simple"></i>
-            <h3>OOP</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem voluptates, accusamus
-                dignissimos molestiae, quidem doloremque tenetur nec</p>
-        </div>
+  <h2>Why Python?</h2>
+  <div class="grid-3-columns">
+    <div>
+      <i class="ph ph-book-open"></i>
+      <h3>Rich Standard Library</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem
+        voluptates, accusamus dignissimos molestiae, quidem doloremque tenetur
+        nec
+      </p>
     </div>
+    <div>
+      <i class="ph ph-code"></i>
+      <h3>Easy and Readable</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem
+        voluptates, accusamus dignissimos molestiae, quidem doloremque tenetur
+        nec
+      </p>
+    </div>
+    <div>
+      <i class="ph ph-stack-simple"></i>
+      <h3>OOP</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem
+        voluptates, accusamus dignissimos molestiae, quidem doloremque tenetur
+        nec
+      </p>
+    </div>
+  </div>
 </section>
 
 <section class="grid-3-columns testimonial-section">
-    <img src="../images/flask-code.png" alt="python code on screen" id="python-code">
-    <div class="testimonial-flex-box">
-        <h2 class="testimonial-title">
-            <span id="simple">Simple. </span>
-            <span id="elegant">Elegant. </span>
-            <span id="popular">Popular.</span>
-        </h2>
-        <blockquote>
-            Python is incredibly easy to read, so developers typically have no
-            problems understanding code written by their fellow programmers.
-            This makes the communication
-            between developers working on the same project much more efficient.
-        </blockquote>
-        <p class="testimonial-author"> - Jose Servin (PyWebDev Community Member)</p>
-    </div>
+  <img
+    src="../images/flask-code.png"
+    alt="python code on screen"
+    id="python-code"
+  />
+  <div class="testimonial-flex-box">
+    <h2 class="testimonial-title">
+      <span id="simple">Simple. </span>
+      <span id="elegant">Elegant. </span>
+      <span id="popular">Popular.</span>
+    </h2>
+    <blockquote>
+      Python is incredibly easy to read, so developers typically have no
+      problems understanding code written by their fellow programmers. This
+      makes the communication between developers working on the same project
+      much more efficient.
+    </blockquote>
+    <p class="testimonial-author">- Jose Servin (PyWebDev Community Member)</p>
+  </div>
 </section>
