--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -4,20 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Permanent+Marker&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&family=Permanent+Marker&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <script src="https://unpkg.com/phosphor-icons"></script>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="style.css" />
     <title>PyWebDev</title>
   </head>
 
@@ -119,24 +113,50 @@
 
       <section class="section-why-join">
         <div class="section-heading container">
+          <span>Community</span>
           <h2>Become a PyWebDev Community Member</h2>
         </div>
         <div class="container grid grid--2-columns">
+          <!-- STEP 1 -->
           <div class="why-join-text-box">
-            <p class="step-number">1</p>
+            <p class="step-number">01</p>
             <h3 class="heading-h3">Sign Up for Free!</h3>
             <p class="step-description">
               Become a member of the PyWebDev Community to gain access to
               hundreds of free resources.
             </p>
           </div>
+          <!-- IMAGE 1 -->
           <div class="why-join-image">
             <img src="../images/sign-up-form.png" alt="" />
           </div>
-          <div class="why-join-image">4 Words</div>
-          <div class="why-join-text-box">Learn by...</div>
-          <div class="why-join-text-box">Network</div>
-          <div class="why-join-image">Connect with others</div>
+          <!-- IMAGE 2-->
+          <div class="why-join-image">
+            <img src="../images/sign-up-form.png" alt="" />
+          </div>
+          <!-- STEP 2 -->
+          <div class="why-join-text-box">
+            <p class="step-number">02</p>
+            <h3 class="heading-h3">Learn by Doing.</h3>
+            <h3 class="heading-h3">Learn with Others.</h3>
+            <p class="step-description">
+              Become a member of the PyWebDev Community to gain access to
+              hundreds of free resources.
+            </p>
+          </div>
+          <!-- STEP 3 -->
+          <div class="why-join-text-box">
+            <p class="step-number">03</p>
+            <h3 class="heading-h3">Build your Network!</h3>
+            <p class="step-description">
+              Become a member of the PyWebDev Community to gain access to
+              hundreds of free resources.
+            </p>
+          </div>
+          <!-- IMAGE 3 -->
+          <div class="why-join-image">
+            <img src="../images/sign-up-form.png" alt="" />
+          </div>
         </div>
       </section>
     </main>
