final why join layout completed; small text edits next

--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -116,11 +116,11 @@
           <span>Community</span>
           <h2>Become a PyWebDev Community Member</h2>
         </div>
-        <div class="container grid grid--2-columns">
+        <div class="container grid grid--2-columns grid--center-v">
           <!-- STEP 1 -->
           <div class="why-join-text-box">
             <p class="step-number">01</p>
-            <h3 class="heading-h3">Sign Up for Free!</h3>
+            <h3 class="step-heading">Sign Up for Free!</h3>
             <p class="step-description">
               Become a member of the PyWebDev Community to gain access to
               hundreds of free resources.
@@ -137,8 +137,10 @@
           <!-- STEP 2 -->
           <div class="why-join-text-box">
             <p class="step-number">02</p>
-            <h3 class="heading-h3">Learn by Doing.</h3>
-            <h3 class="heading-h3">Learn with Others.</h3>
+            <h3 class="step-heading">
+              Learn by Doing. <br />
+              Learn with Others.
+            </h3>
             <p class="step-description">
               Become a member of the PyWebDev Community to gain access to
               hundreds of free resources.
@@ -147,7 +149,7 @@
           <!-- STEP 3 -->
           <div class="why-join-text-box">
             <p class="step-number">03</p>
-            <h3 class="heading-h3">Build your Network!</h3>
+            <h3 class="step-heading">Build your Network!</h3>
             <p class="step-description">
               Become a member of the PyWebDev Community to gain access to
               hundreds of free resources.
