--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -145,7 +145,14 @@
           </div>
           <!-- IMAGE 2-->
           <div class="why-join-image">
-            <img src="../images/sign-up-form.png" alt="" />
+            <div class="parent-circle-div">
+              <div id="circle">
+                <span id="collaborate">Collaborate</span>
+                <span id="contribute">Contribute</span>
+                <span id="mentor">Mentor</span>
+                <span id="learn">Learn</span>
+              </div>
+            </div>
           </div>
           <!-- STEP 2 -->
           <div class="why-join-text-box">
@@ -174,6 +181,17 @@
           </div>
         </div>
       </section>
+
+      <section class="section-courses">
+        <div class="section-heading container">
+          <span>Courses</span>
+          <h2>Pick a course and get started right away!</h2>
+        </div>
+      </section>
     </main>
+    <script type="module">
+      import mermaid from "https://cdn.jsdelivr.net/npm/mermaid@9/dist/mermaid.esm.min.mjs";
+      mermaid.initialize({ startOnLoad: true });
+    </script>
   </body>
 </html>
