resized images and added network cards for each member

--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -122,11 +122,11 @@
         <div class="container">
           <h2 class="featured-in-heading">Featured In</h2>
           <div class="featured-in-logos">
-            <img src="../images/featured-in-logos/datacamp.png" alt="" />
-            <img src="../images/featured-in-logos/odinproject.png" alt="" />
+            <img src="../images/featured-in-logos/datacamp.avif" alt="" />
+            <img src="../images/featured-in-logos/odinproject.avif" alt="" />
             <img src="../images/featured-in-logos/codepen.avif" alt="" />
             <img src="../images/featured-in-logos/github.png" alt="" />
-            <img src="../images/featured-in-logos/udemy.png" alt="" />
+            <img src="../images/featured-in-logos/udemy.avif" alt="" />
           </div>
         </div>
       </section>
@@ -182,9 +182,74 @@
               hundreds of free resources.
             </p>
           </div>
-          <!-- IMAGE 3 -->
-          <div class="why-join-image">
-            <img src="../images/sign-up-form.png" alt="" />
+          <!-- IMAGE 3: MEMBERS -->
+          <div class="why-join-members">
+            <div class="member-card">
+              <img
+                src="../images/community-members/team-member-5.jpg"
+                alt="team member"
+                class="member-image"
+              />
+              <div>
+                <h3 class="member-name">Elliott Turner</h3>
+                <p class="member-role">Senior Software Developer</p>
+              </div>
+            </div>
+            <div class="member-card">
+              <img
+                src="../images/community-members/team-member-2.jpg"
+                alt="team member"
+                class="member-image"
+              />
+              <div>
+                <h3 class="member-name">Camila Thompson</h3>
+                <p class="member-role">Senior Software Developer</p>
+              </div>
+            </div>
+            <div class="member-card">
+              <img
+                src="../images/community-members/team-member-1.jpg"
+                alt="team member"
+                class="member-image"
+              />
+              <div>
+                <h3 class="member-name">Ricardo Campbell</h3>
+                <p class="member-role">Curriculum Manager</p>
+              </div>
+            </div>
+            <div class="member-card">
+              <img
+                src="../images/community-members/team-member-6.jpg"
+                alt="team member"
+                class="member-image"
+              />
+              <div>
+                <h3 class="member-name">Anthony Gomez</h3>
+                <p class="member-role">Junior Software Developer</p>
+              </div>
+            </div>
+            <div class="member-card">
+              <img
+                src="../images/community-members/team-member-3.jpg"
+                alt="team member"
+                class="member-image"
+              />
+              <div>
+                <h3 class="member-name">Lily Barnes</h3>
+                <p class="member-role">DevOps Engineer</p>
+              </div>
+            </div>
+            <div class="member-card">
+              <img
+                src="../images/community-members/team-member-4.jpg"
+                alt="team member"
+                class="member-image"
+              />
+              <div>
+                <h3 class="member-name">Arielle Taylor</h3>
+                <p class="member-role">Data Scientist</p>
+              </div>
+            </div>
           </div>
         </div>
       </section>
@@ -294,7 +359,7 @@
           <div class="course">
             <div class="course-image">
               <img
-                src="../images/courses/postres-sql-logo.png"
+                src="../images/courses/postres-sql-logo.avif"
                 alt="an image of the PostgreSQL logo"
               />
             </div>
@@ -322,7 +387,7 @@
           <div class="course">
             <div class="course-image">
               <img
-                src="../images/courses/react-logo.png"
+                src="../images/courses/react-logo.avif"
                 alt="an image of the React logo"
               />
             </div>
