building Testimonial section

--- a/HTML_CSS/WebDesign/PyWebDev/index.html
+++ b/HTML_CSS/WebDesign/PyWebDev/index.html
@@ -184,15 +184,47 @@
           </div>
           <!-- IMAGE 3: MEMBERS -->
           <div class="why-join-members">
-            <div class="member-card">
-              <img
-                src="../images/community-members/team-member-5.jpg"
-                alt="team member"
-                class="member-image"
-              />
-              <div>
-                <h3 class="member-name">Elliott Turner</h3>
-                <p class="member-role">Senior Software Developer</p>
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <div class="member-card">
+                    <img
+                      src="../images/community-members/team-member-5.jpg"
+                      alt="team member"
+                      class="member-image"
+                    />
+                    <div>
+                      <h3 class="member-name">Elliott Turner</h3>
+                      <p class="member-role">Senior Software Developer</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="flip-card-back">
+                  <div class="member-card">
+                    <img
+                      src="../images/community-members/team-member-5.jpg"
+                      alt="team member"
+                      class="member-image"
+                    />
+                    <div>
+                      <h3 class="member-connect">Connect with {name}!</h3>
+                      <div class="member-icons-container">
+                        <ion-icon
+                          class="member-contact-icons"
+                          name="logo-twitter"
+                        ></ion-icon>
+                        <ion-icon
+                          class="member-contact-icons"
+                          name="logo-github"
+                        ></ion-icon>
+                        <ion-icon
+                          class="member-contact-icons"
+                          name="mail"
+                        ></ion-icon>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
             <div class="member-card">
@@ -214,7 +246,7 @@
               />
               <div>
                 <h3 class="member-name">Ricardo Campbell</h3>
-                <p class="member-role">Curriculum Manager</p>
+                <p class="member-role">Data Analyst</p>
               </div>
             </div>
             <div class="member-card">
@@ -411,6 +443,112 @@
               <span class="tag">React</span>
               <span class="tag">Full-Stack</span>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-testimonial">
+        <div class="section-heading container">
+          <span>Success Stories</span>
+          <h2>Don't just take our word for it.</h2>
+        </div>
+        <div class="testimonial-container grid grid--2-columns">
+          <div class="reviews grid grid--3-columns grid--center-v">
+            <figure>
+              <blockquote>
+                If debugging is the process of removing software bugs, then
+                programming must be the process of putting them in.
+              </blockquote>
+              <figcaption><b>Edsger Dijkstra</b></figcaption>
+            </figure>
+            <figure>
+              <blockquote>
+                If debugging is the process of removing software bugs, then
+                programming must be the process of putting them in.
+              </blockquote>
+              <figcaption><b>Edsger Dijkstra</b></figcaption>
+            </figure>
+            <figure>
+              <blockquote>
+                If debugging is the process of removing software bugs, then
+                programming must be the process of putting them in.
+              </blockquote>
+              <figcaption><b>Edsger Dijkstra</b></figcaption>
+            </figure>
+            <figure>
+              <blockquote>
+                If debugging is the process of removing software bugs, then
+                programming must be the process of putting them in.
+              </blockquote>
+              <figcaption><b>Edsger Dijkstra</b></figcaption>
+            </figure>
+            <figure>
+              <blockquote>
+                If debugging is the process of removing software bugs, then
+                programming must be the process of putting them in.
+              </blockquote>
+              <figcaption><b>Edsger Dijkstra</b></figcaption>
+            </figure>
+            <figure>
+              <blockquote>
+                If debugging is the process of removing software bugs, then
+                programming must be the process of putting them in.
+              </blockquote>
+              <figcaption><b>Edsger Dijkstra</b></figcaption>
+            </figure>
+          </div>
+          <div class="gallery">
+            <!-- ROW 1 -->
+            <img
+              src="../images/community-members/team-member-5.jpg"
+              alt="team member"
+            />
+            <img
+              src="../images/community-members/team-member-5.jpg"
+              alt="team member"
+            />
+            <img
+              src="../images/community-members/team-member-5.jpg"
+              alt="team member"
+            />
+            <img
+              src="../images/community-members/team-member-5.jpg"
+              alt="team member"
+            />
+            <!-- ROW 2 -->
+            <img
+              src="../images/community-members/team-member-5.jpg"
+              alt="team member"
+            />
+            <img
+              src="../images/community-members/team-member-5.jpg"
+              alt="team member"
+            />
+            <img
+              src="../images/community-members/team-member-5.jpg"
+              alt="team member"
+            />
+            <img
+              src="../images/community-members/team-member-5.jpg"
+              alt="team member"
+            />
+            <!-- ROW 3 -->
+            <img
+              src="../images/community-members/team-member-5.jpg"
+              alt="team member"
+            />
+            <img
+              src="../images/community-members/team-member-5.jpg"
+              alt="team member"
+            />
+            <img
+              src="../images/community-members/team-member-5.jpg"
+              alt="team member"
+            />
+            <img
+              src="../images/community-members/team-member-5.jpg"
+              alt="team member"
+            />
           </div>
         </div>
       </section>
